@@ -1,7 +1,7 @@
 CLFSWM -  A(nother) Common Lisp FullScreen Window Manager
 ---------------------------------------------------------
 
-Philippe Brochard   pbrochard at common-lisp dot net test
+Philippe Brochard   pbrochard at common-lisp dot net
 
 
 Contributors
@@ -11,7 +11,8 @@ Xavier Maillard     xma at gnu dot org
 Cyrille THOUVENIN
 Desmond O. Chang <dochang at gmail dot com>
 Sylvain HENRY <hsyl20 at gmail dot com>
-
+Ales Guzik <ales dot guzik at gmail dot com>
+Philipp Kroos <philipp dot kroos at t-online dot de>
 
 -----------------------------------
 
