@@ -1,3 +1,8 @@
+2012-08-20  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-internal.lisp (add-in-never-managed-window-list): New
+	function.
+
 2012-08-20  Philipp Kroos  <philipp.kroos@t-online.de>
 
 	* src/clfswm-placement.lisp (here-placement): Evaluates to current
